<resources>
    <string name="app_name">Marvel</string>
    <string name="desc">image description</string>
    <string name="search_hint">Search</string>
    <string name="search_title">Search Characters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">Retry</string>
    <string name="error_loading">Couldn\'t load data..
        \n
        please try again and check your network</string>
    <string name="dummy_paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet dolorem ducimus error excepturi magnam nesciunt odit praesentium quam soluta totam.</string>
    <string name="description_lbl">Description</string>
    <string name="comics_lbl">Comics</string>
    <string name="events_lbl">Events</string>
    <string name="series_lbl">Series</string>
    <string name="stories_lbl">Stories</string>
    <string name="no_description_found">No Description Found</string>
    <string name="loading_data">Loading Data</string>
    <string name="no_data_found">No Data Found</string>
</resources>